[package]
name = "yoga"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
futures = "0.3.31"
indicatif = "0.17.9"
octocrab = "0.41.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tabled = "0.16.0"
tokio = { version = "1.41.1", features = ["full"] }
